changed general styling of entire website, fixed issues with sidebar auth (not showing correct pages when signed in), fixed various react errors, removed nav header

--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,10 +1,10 @@
 .Sidebar {
   color: rgb(0, 0, 0);
   z-index: 1;
-  height: 95vh;
+  height: 100vh;
   width: 250px;
   transform: translateY(-10px);
-  background-color: #050e32;
+  background-color: #1f1f1f;
   box-shadow: 0px 0px 1px black;
   position: sticky;
   top: 0;
@@ -15,6 +15,20 @@
   width: 100%;
   padding: 20px 0 0 0;
   margin: 10px 0 100px 0;
+}
+
+#sidebar-logo {
+  height: fit-content;
+  scale: 1;
+  width: fit-content;
+  translate: 0px 0px;
+}
+
+#sidebar-logo img {
+  height: 50px;
+  width: 50px;
+  margin-left: 0px;
+  translate: -11px 0px;
 }
 
 .SidebarList a {
@@ -64,4 +78,15 @@
 
 .Sidebar .Hidden {
   display: none;
+}
+
+#sidebar-login,
+#sidebar-signout {
+  position: absolute;
+  bottom: 0;
+}
+
+.row:hover {
+  cursor: pointer;
+  color: #c7282d;
 }
