--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 /* Rest of your existing styles */
 body {
-  background-image: url("../public/background-image.jpg");
+  background-image: url("../public/wp1929742-bowling-wallpapers.jpg");
   background-color: rgb(66, 66, 66);
   margin: 0;
   padding: 0;
   background-size: auto 130%;
-  background-position: 45% center;
+  background-position: 57% center;
   background-repeat: no-repeat;
   height: 100vh;
   overflow: hidden;
